feat: show course ownership for general electives
